@@ -9,13 +9,14 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class onlineCommand extends SubCommand {
     private final GangsX plugin;
 
     public onlineCommand(GangsX plugin) {
-        super("online", "gangsx.command.online", "/gang online", List.of("onlinemembers"));
+        super("online", "gangsx.command.online", "/gang online", Arrays.asList("onlinemembers"));
         this.plugin = plugin;
     }
     @Override
